--- a/NN_4Layers_8bits_base/Quartus/NN_3_3_2_2_base.qsf
+++ b/NN_4Layers_8bits_base/Quartus/NN_3_3_2_2_base.qsf
@@ -41,7 +41,7 @@ set_global_assignment -name DEVICE auto
 set_global_assignment -name TOP_LEVEL_ENTITY top_shift
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION "13.0 SP1"
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "14:48:35  DECEMBER 07, 2022"
-set_global_assignment -name LAST_QUARTUS_VERSION "13.0 SP1"
+set_global_assignment -name LAST_QUARTUS_VERSION 13.1
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
