--- a/NN_2Layers_8bits/Quartus/NN_2Layers_8bits.qsf
+++ b/NN_2Layers_8bits/Quartus/NN_2Layers_8bits.qsf
@@ -51,6 +51,8 @@ set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulati
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
+set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name VHDL_FILE ../Neuron/Others/ROM_fx_8bitaddr_8width.vhd
 set_global_assignment -name VHDL_FILE ../Neuron/Others/ROM_fx_8bitaddr_7width.vhd
 set_global_assignment -name VHDL_FILE ../Neuron/Others/activation_fx.vhd
@@ -61,12 +63,11 @@ set_global_assignment -name VHDL_FILE ../Neuron/SoftmaxLayer/Tree/NObarriers/Sig
 set_global_assignment -name VHDL_FILE ../Neuron/SoftmaxLayer/Tree/NObarriers/Sigmoid/8bit/3n/neuron_Sigmoid_3n.vhd
 set_global_assignment -name VHDL_FILE ../Neuron/SoftmaxLayer/Tree/NObarriers/Sigmoid/8bit/3n/MAC_3n.vhd
 set_global_assignment -name VHDL_FILE ../Neuron/HiddenLayer/Tree/NObarriers/ReLU/8bit/5n/shift_reg_5n.vhd
+set_global_assignment -name VHDL_FILE ../Neuron/HiddenLayer/Tree/NObarriers/ReLU/8bit/5n/neuron_ReLU_5n_out.vhd
 set_global_assignment -name VHDL_FILE ../Neuron/HiddenLayer/Tree/NObarriers/ReLU/8bit/5n/neuron_ReLU_5n.vhd
 set_global_assignment -name VHDL_FILE ../Neuron/HiddenLayer/Tree/NObarriers/ReLU/8bit/5n/MAC_5n.vhd
 set_global_assignment -name VHDL_FILE ../Layers/camada1_Sigmoid_2neuron_8bits_3n_signed.vhd
 set_global_assignment -name VHDL_FILE ../Layers/camada0_ReLU_3neuron_8bits_5n_signed.vhd
 set_global_assignment -name VHDL_FILE ../Topo/top_shift.vhd
 set_global_assignment -name VHDL_FILE ../parameters.vhd
-set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
-set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
