--- a/Quartus/teste.qsf
+++ b/Quartus/teste.qsf
@@ -41,7 +41,7 @@ set_global_assignment -name DEVICE EP4CGX150DF31I7AD
 set_global_assignment -name TOP_LEVEL_ENTITY MAC
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION "13.0 SP1"
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "15:38:11  SEPTEMBER 17, 2022"
-set_global_assignment -name LAST_QUARTUS_VERSION "13.0 SP1"
+set_global_assignment -name LAST_QUARTUS_VERSION 13.1
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP "-40"
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 100
