--- a/NN_2Layers_8bits/quartus/NN_2Layers_8bits.qsf
+++ b/NN_2Layers_8bits/quartus/NN_2Layers_8bits.qsf
@@ -42,6 +42,19 @@ set_global_assignment -name TOP_LEVEL_ENTITY top
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION "13.0 SP1"
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "13:58:52  FEBRUARY 17, 2023"
 set_global_assignment -name LAST_QUARTUS_VERSION "13.0 SP1"
+set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
+set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
+set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
+set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 256
+set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (VHDL)"
+set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulation
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
+set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name VHDL_FILE ../Neuron/HiddenLayer/Tree/NObarriers/ReLU/8bit/5n/neuron_ReLU_5n_out.vhd
+set_global_assignment -name VHDL_FILE ../Neuron/Others/ROM_fx_8bitaddr_8width.vhd
 set_global_assignment -name VHDL_FILE ../Neuron/Others/Reg.vhd
 set_global_assignment -name VHDL_FILE ../Neuron/Others/mult0_v0.vhd
 set_global_assignment -name VHDL_FILE ../Neuron/Others/add0_v0.vhd
@@ -55,13 +68,4 @@ set_global_assignment -name VHDL_FILE ../Layers/camada1_Sigmoid_2neuron_8bits_3n
 set_global_assignment -name VHDL_FILE ../Layers/camada0_ReLU_3neuron_8bits_5n_signed.vhd
 set_global_assignment -name VHDL_FILE ../top.vhd
 set_global_assignment -name VHDL_FILE ../parameters.vhd
-set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
-set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
-set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
-set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 256
-set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (VHDL)"
-set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulation
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
