--- a/NN_4Layers_8bits/Quartus/NN_4Layers_8bits.qsf
+++ b/NN_4Layers_8bits/Quartus/NN_4Layers_8bits.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CGXFC7D7F31C8ES
-set_global_assignment -name TOP_LEVEL_ENTITY top_shift
+set_global_assignment -name TOP_LEVEL_ENTITY top
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION "13.0 SP1"
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "16:26:52  OCTOBER 21, 2022"
 set_global_assignment -name LAST_QUARTUS_VERSION "13.0 SP1"
@@ -50,26 +50,31 @@ set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (VHDL)"
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulation
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name VHDL_FILE ../Layers/camada3_Sigmoid_3neuron_8bits_2n_signed.vhd
+set_global_assignment -name VHDL_FILE ../Layers/camada2_ReLU_2neuron_8bits_1n_signed.vhd
+set_global_assignment -name VHDL_FILE ../Layers/camada1_ReLU_1neuron_8bits_4n_signed.vhd
+set_global_assignment -name VHDL_FILE ../Layers/camada0_ReLU_4neuron_8bits_5n_signed.vhd
+set_global_assignment -name VHDL_FILE ../Neuron/shift_reg_5n.vhd
+set_global_assignment -name VHDL_FILE ../Neuron/shift_reg_4n.vhd
+set_global_assignment -name VHDL_FILE ../Neuron/shift_reg_2n.vhd
+set_global_assignment -name VHDL_FILE ../Neuron/shift_reg_1n.vhd
+set_global_assignment -name VHDL_FILE ../Neuron/Reg.vhd
+set_global_assignment -name VHDL_FILE ../Neuron/neuron_Sigmoid_2n.vhd
+set_global_assignment -name VHDL_FILE ../Neuron/neuron_ReLU_5n_out.vhd
+set_global_assignment -name VHDL_FILE ../Neuron/neuron_ReLU_5n.vhd
+set_global_assignment -name VHDL_FILE ../Neuron/neuron_ReLU_4n_out.vhd
+set_global_assignment -name VHDL_FILE ../Neuron/neuron_ReLU_4n.vhd
+set_global_assignment -name VHDL_FILE ../Neuron/neuron_ReLU_1n_out.vhd
+set_global_assignment -name VHDL_FILE ../Neuron/neuron_ReLU_1n.vhd
+set_global_assignment -name VHDL_FILE ../Neuron/mult0_v0.vhd
+set_global_assignment -name VHDL_FILE ../Neuron/MAC_5n.vhd
+set_global_assignment -name VHDL_FILE ../Neuron/MAC_4n.vhd
+set_global_assignment -name VHDL_FILE ../Neuron/MAC_2n.vhd
+set_global_assignment -name VHDL_FILE ../Neuron/MAC_1n.vhd
+set_global_assignment -name VHDL_FILE ../Neuron/add0_v0.vhd
+set_global_assignment -name VHDL_FILE ../top.vhd
+set_global_assignment -name VHDL_FILE ../parameters.vhd
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_global_assignment -name VHDL_FILE ../VHDs_base/Neurons&MACs/ROM_fx_8bitaddr_8width.vhd
-set_global_assignment -name VHDL_FILE ../VHDs_base/top/top_shift.vhd
-set_global_assignment -name VHDL_FILE ../Neuron/Others/mult0_v0.vhd
-set_global_assignment -name VHDL_FILE ../Neuron/Others/add0_v0.vhd
-set_global_assignment -name VHDL_FILE ../parameters.vhd
-set_global_assignment -name VHDL_FILE ../Neuron/Others/Reg.vhd
-set_global_assignment -name VHDL_FILE ../Neuron/SoftmaxLayer/Tree/NObarriers/Sigmoid/8bit/2n/shift_reg_2n.vhd
-set_global_assignment -name VHDL_FILE ../Neuron/SoftmaxLayer/Tree/NObarriers/Sigmoid/8bit/2n/neuron_Sigmoid_2n.vhd
-set_global_assignment -name VHDL_FILE ../Neuron/SoftmaxLayer/Tree/NObarriers/Sigmoid/8bit/2n/MAC_2n.vhd
-set_global_assignment -name VHDL_FILE ../Neuron/HiddenLayer/Tree/NObarriers/ReLU/8bit/5n/shift_reg_5n.vhd
-set_global_assignment -name VHDL_FILE ../Neuron/HiddenLayer/Tree/NObarriers/ReLU/8bit/5n/neuron_ReLU_5n.vhd
-set_global_assignment -name VHDL_FILE ../Neuron/HiddenLayer/Tree/NObarriers/ReLU/8bit/5n/MAC_5n.vhd
-set_global_assignment -name VHDL_FILE ../Neuron/HiddenLayer/Tree/NObarriers/ReLU/8bit/3n/shift_reg_3n.vhd
-set_global_assignment -name VHDL_FILE ../Neuron/HiddenLayer/Tree/NObarriers/ReLU/8bit/3n/neuron_ReLU_3n.vhd
-set_global_assignment -name VHDL_FILE ../Neuron/HiddenLayer/Tree/NObarriers/ReLU/8bit/3n/MAC_3n.vhd
-set_global_assignment -name VHDL_FILE ../Layers/camada3_Sigmoid_2neuron_8bits_2n_signed.vhd
-set_global_assignment -name VHDL_FILE ../Layers/camada2_ReLU_2neuron_8bits_3n_signed.vhd
-set_global_assignment -name VHDL_FILE ../Layers/camada1_ReLU_3neuron_8bits_3n_signed.vhd
-set_global_assignment -name VHDL_FILE ../Layers/camada0_ReLU_3neuron_8bits_5n_signed.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
