--- a/NN_4Layers_8bits/Quartus/NN_4Layers_8bits.qsf
+++ b/NN_4Layers_8bits/Quartus/NN_4Layers_8bits.qsf
@@ -50,6 +50,10 @@ set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (VHDL)"
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulation
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name VHDL_FILE ../Neuron/ROM_fx_8bitaddr_8width.vhd
 set_global_assignment -name VHDL_FILE ../Layers/camada3_Sigmoid_3neuron_8bits_2n_signed.vhd
 set_global_assignment -name VHDL_FILE ../Layers/camada2_ReLU_2neuron_8bits_1n_signed.vhd
 set_global_assignment -name VHDL_FILE ../Layers/camada1_ReLU_1neuron_8bits_4n_signed.vhd
@@ -74,7 +78,4 @@ set_global_assignment -name VHDL_FILE ../Neuron/MAC_1n.vhd
 set_global_assignment -name VHDL_FILE ../Neuron/add0_v0.vhd
 set_global_assignment -name VHDL_FILE ../top.vhd
 set_global_assignment -name VHDL_FILE ../parameters.vhd
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
