--- a/NNs/NN_4Layers_8bits_6_5_3_1_Barriers/Quartus/NN_4Layers_8bits_6_5_3_1_Barriers.qsf
+++ b/NNs/NN_4Layers_8bits_6_5_3_1_Barriers/Quartus/NN_4Layers_8bits_6_5_3_1_Barriers.qsf
@@ -42,6 +42,16 @@ set_global_assignment -name TOP_LEVEL_ENTITY top
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION "13.0 SP1"
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "20:50:34  FEBRUARY 26, 2023"
 set_global_assignment -name LAST_QUARTUS_VERSION "13.0 SP1"
+set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
+set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
+set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
+set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 256
+set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (VHDL)"
+set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulation
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name VHDL_FILE ../Layers/camada0_ReLU_6neuron_8bits_5n_signed.vhd
 set_global_assignment -name VHDL_FILE ../Neuron/shift_reg_10n.vhd
 set_global_assignment -name VHDL_FILE ../Neuron/shift_reg_6n.vhd
 set_global_assignment -name VHDL_FILE ../Neuron/shift_reg_5n.vhd
@@ -67,13 +77,6 @@ set_global_assignment -name VHDL_FILE ../Layers/camada0_ReLU_6neuron_8bits_10n_s
 set_global_assignment -name VHDL_FILE ../top.vhd
 set_global_assignment -name VHDL_FILE ../parameters.vhd
 set_global_assignment -name VHDL_FILE ../add0_v0.vhd
-set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
-set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
-set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
-set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 256
-set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (VHDL)"
-set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulation
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
+set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
