--- a/NNs/NN_4Layers_8bits_5_2_3_4/Quartus/NN_4Layers_8bits_5_2_3_4.qsf
+++ b/NNs/NN_4Layers_8bits_5_2_3_4/Quartus/NN_4Layers_8bits_5_2_3_4.qsf
@@ -42,27 +42,6 @@ set_global_assignment -name TOP_LEVEL_ENTITY top
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION "13.0 SP1"
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "08:49:32  MARCH 02, 2023"
 set_global_assignment -name LAST_QUARTUS_VERSION "13.0 SP1"
-set_global_assignment -name VHDL_FILE ../../NN_4Layers_8bits_5_2_3_4_Barriers/top.vhd
-set_global_assignment -name VHDL_FILE ../../NN_4Layers_8bits_5_2_3_4_Barriers/ROM_fx_8bitaddr_8width.vhd
-set_global_assignment -name VHDL_FILE ../../NN_4Layers_8bits_5_2_3_4_Barriers/parameters.vhd
-set_global_assignment -name VHDL_FILE ../../NN_4Layers_8bits_5_2_3_4_Barriers/mult0_v0.vhd
-set_global_assignment -name VHDL_FILE ../../NN_4Layers_8bits_5_2_3_4_Barriers/add0_v0.vhd
-set_global_assignment -name VHDL_FILE ../../NN_4Layers_8bits_5_2_3_4_Barriers/Layers/camada3_Sigmoid_4neuron_8bits_3n_signed.vhd
-set_global_assignment -name VHDL_FILE ../../NN_4Layers_8bits_5_2_3_4_Barriers/Layers/camada2_ReLU_3neuron_8bits_2n_signed.vhd
-set_global_assignment -name VHDL_FILE ../../NN_4Layers_8bits_5_2_3_4_Barriers/Layers/camada1_ReLU_2neuron_8bits_5n_signed.vhd
-set_global_assignment -name VHDL_FILE ../../NN_4Layers_8bits_5_2_3_4_Barriers/Layers/camada0_ReLU_5neuron_8bits_5n_signed.vhd
-set_global_assignment -name VHDL_FILE ../../NN_4Layers_8bits_5_2_3_4_Barriers/Neuron/shift_reg_5n.vhd
-set_global_assignment -name VHDL_FILE ../../NN_4Layers_8bits_5_2_3_4_Barriers/Neuron/shift_reg_3n.vhd
-set_global_assignment -name VHDL_FILE ../../NN_4Layers_8bits_5_2_3_4_Barriers/Neuron/shift_reg_2n.vhd
-set_global_assignment -name VHDL_FILE ../../NN_4Layers_8bits_5_2_3_4_Barriers/Neuron/Reg.vhd
-set_global_assignment -name VHDL_FILE ../../NN_4Layers_8bits_5_2_3_4_Barriers/Neuron/neuron_comb_Barriers_Sigmoid_3n_8bit_signed_mult0_add0_v0_v0.vhd
-set_global_assignment -name VHDL_FILE ../../NN_4Layers_8bits_5_2_3_4_Barriers/Neuron/neuron_comb_Barriers_ReLU_5n_8bit_signed_mult0_add0_v0_v0_out.vhd
-set_global_assignment -name VHDL_FILE ../../NN_4Layers_8bits_5_2_3_4_Barriers/Neuron/neuron_comb_Barriers_ReLU_5n_8bit_signed_mult0_add0_v0_v0.vhd
-set_global_assignment -name VHDL_FILE ../../NN_4Layers_8bits_5_2_3_4_Barriers/Neuron/neuron_comb_Barriers_ReLU_2n_8bit_signed_mult0_add0_v0_v0_out.vhd
-set_global_assignment -name VHDL_FILE ../../NN_4Layers_8bits_5_2_3_4_Barriers/Neuron/neuron_comb_Barriers_ReLU_2n_8bit_signed_mult0_add0_v0_v0.vhd
-set_global_assignment -name VHDL_FILE ../../NN_4Layers_8bits_5_2_3_4_Barriers/Neuron/MAC_comb_Barriers_5n_8bit_signed_mult0_v0_add0_v0.vhd
-set_global_assignment -name VHDL_FILE ../../NN_4Layers_8bits_5_2_3_4_Barriers/Neuron/MAC_comb_Barriers_3n_8bit_signed_mult0_v0_add0_v0.vhd
-set_global_assignment -name VHDL_FILE ../../NN_4Layers_8bits_5_2_3_4_Barriers/Neuron/MAC_comb_Barriers_2n_8bit_signed_mult0_v0_add0_v0.vhd
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
@@ -72,4 +51,27 @@ set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulati
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name VHDL_FILE ../top.vhd
+set_global_assignment -name VHDL_FILE ../ROM_fx_8bitaddr_8width.vhd
+set_global_assignment -name VHDL_FILE ../parameters.vhd
+set_global_assignment -name VHDL_FILE ../mult0_v0.vhd
+set_global_assignment -name VHDL_FILE ../add0_v0.vhd
+set_global_assignment -name VHDL_FILE ../Layers/camada3_Sigmoid_4neuron_8bits_3n_signed.vhd
+set_global_assignment -name VHDL_FILE ../Layers/camada2_ReLU_3neuron_8bits_2n_signed.vhd
+set_global_assignment -name VHDL_FILE ../Layers/camada1_ReLU_2neuron_8bits_5n_signed.vhd
+set_global_assignment -name VHDL_FILE ../Layers/camada0_ReLU_5neuron_8bits_5n_signed.vhd
+set_global_assignment -name VHDL_FILE ../Neuron/shift_reg_5n.vhd
+set_global_assignment -name VHDL_FILE ../Neuron/shift_reg_3n.vhd
+set_global_assignment -name VHDL_FILE ../Neuron/shift_reg_2n.vhd
+set_global_assignment -name VHDL_FILE ../Neuron/Reg.vhd
+set_global_assignment -name VHDL_FILE ../Neuron/neuron_comb_Sigmoid_3n_8bit_signed_mult0_v0_add0_v0.vhd
+set_global_assignment -name VHDL_FILE ../Neuron/neuron_comb_ReLU_5n_8bit_signed_mult0_v0_add0_v0_out.vhd
+set_global_assignment -name VHDL_FILE ../Neuron/neuron_comb_ReLU_5n_8bit_signed_mult0_v0_add0_v0.vhd
+set_global_assignment -name VHDL_FILE ../Neuron/neuron_comb_ReLU_2n_8bit_signed_mult0_v0_add0_v0_out.vhd
+set_global_assignment -name VHDL_FILE ../Neuron/neuron_comb_ReLU_2n_8bit_signed_mult0_v0_add0_v0.vhd
+set_global_assignment -name VHDL_FILE ../Neuron/MAC_comb_5n_8bit_signed_mult0_v0_add0_v0.vhd
+set_global_assignment -name VHDL_FILE ../Neuron/MAC_comb_3n_8bit_signed_mult0_v0_add0_v0.vhd
+set_global_assignment -name VHDL_FILE ../Neuron/MAC_comb_2n_8bit_signed_mult0_v0_add0_v0.vhd
+set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
+set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
