--- a/NNs/NN_4Layers_8bits_5_2_3_4/Quartus/NN_4Layers_8bits_5_2_3_4.qsf
+++ b/NNs/NN_4Layers_8bits_5_2_3_4/Quartus/NN_4Layers_8bits_5_2_3_4.qsf
@@ -82,3 +82,5 @@ set_global_assignment -name EDA_TEST_BENCH_RUN_SIM_FOR "10 us" -section_id tb_to
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME tb_top -section_id tb_top
 set_global_assignment -name EDA_TEST_BENCH_FILE ../tb_top.vhd -section_id tb_top
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name TEXT_FILE do_wave.txt
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_SETUP_SCRIPT do_wave.txt -section_id eda_simulation
