--- a/NNs/NN_4Layers_8bits_5_2_3_4/Quartus/NN_4Layers_8bits_5_2_3_4.qsf
+++ b/NNs/NN_4Layers_8bits_5_2_3_4/Quartus/NN_4Layers_8bits_5_2_3_4.qsf
@@ -60,6 +60,15 @@ set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id tb_top
 set_global_assignment -name EDA_TEST_BENCH_RUN_SIM_FOR "10 us" -section_id tb_top
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME tb_top -section_id tb_top
 set_global_assignment -name EDA_NATIVELINK_SIMULATION_SETUP_SCRIPT do_wave.txt -section_id eda_simulation
+set_global_assignment -name EDA_TEST_BENCH_NAME top_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id top_tb
+set_global_assignment -name EDA_TEST_BENCH_RUN_SIM_FOR "10 us" -section_id top_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME top_tb -section_id top_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE ../tb_top.vhd -section_id tb_top
+set_global_assignment -name EDA_TEST_BENCH_FILE ../top_tb.vhd -section_id top_tb
+set_global_assignment -name VHDL_FILE ../Neuron/ReLU.vhd
+set_global_assignment -name VHDL_FILE ../Neuron/Leaky_ReLU.vhd
+set_global_assignment -name VHDL_FILE ../Neuron/activation_fx.vhd
 set_global_assignment -name VHDL_FILE ../top_tb.vhd
 set_global_assignment -name VHDL_FILE ../tb_top.vhd
 set_global_assignment -name VHDL_FILE ../Neuron/ROM_fx_8bitaddr_8width.vhd
@@ -84,10 +93,4 @@ set_global_assignment -name VHDL_FILE ../Neuron/MAC_comb_5n_8bit_signed_mult0_v0
 set_global_assignment -name VHDL_FILE ../Neuron/MAC_comb_3n_8bit_signed_mult0_v0_add0_v0.vhd
 set_global_assignment -name VHDL_FILE ../Neuron/MAC_comb_2n_8bit_signed_mult0_v0_add0_v0.vhd
 set_global_assignment -name TEXT_FILE do_wave.txt
-set_global_assignment -name EDA_TEST_BENCH_NAME top_tb -section_id eda_simulation
-set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id top_tb
-set_global_assignment -name EDA_TEST_BENCH_RUN_SIM_FOR "10 us" -section_id top_tb
-set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME top_tb -section_id top_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE ../tb_top.vhd -section_id tb_top
-set_global_assignment -name EDA_TEST_BENCH_FILE ../top_tb.vhd -section_id top_tb
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
